# code-examples

./: README.md
benchmarks/atomic_ops/: atomic_benchmark.hpp  atomic_double.cpp  atomic_float.cpp  atomic_int.cpp  atomic_int64.cpp  atomic_uint64.cpp  atomic_unsigned.cpp  main.cpp
benchmarks/core-level-noise/: main.cpp
dot_product/: CMakeLists.txt  dot_product.cpp
fibonacci_tasks/: fibonacci_tasks.cpp
matrix_vector/: CMakeLists.txt  matrix_vector.cpp
min_sum/: CMakeLists.txt  min_sum.cpp
papers/IWOCL2024/: Makefile.inc  README.md
papers/IWOCL2024/axpy/: CMakeLists.txt  Makefile  axpy.hpp  main.cpp
papers/IWOCL2024/cgsolve/: CMakeLists.txt  cgsolve.hpp  generate_matrix.hpp  main.cpp
papers/IWOCL2024/dot/: CMakeLists.txt  Makefile  dot.hpp  main.cpp
papers/europar-2024/: Makefile.inc  README.md
papers/europar-2024/axpby-dot/: CMakeLists.txt  Makefile  axpby_ompx.hpp  dot_ompx.hpp  main.cpp
papers/europar-2024/cgsolve/: CMakeLists.txt  Makefile  cgsolve.hpp  (+2 more)
papers/iwomp-2023/: Makefile.inc  README.md
papers/kokkos-core-tpdc-2021/graph_sample/: CMakeLists.txt  graph_sample.cpp
papers/kokkos-core-tpds-2021/: reproducer.md
papers/kokkos-core-tpds-2021/atomic/: CMakeLists.txt  Makefile  atomic.cpp  reproducer.md
papers/kokkos-half-t/: analyse_all  analyse_data  analyse_one  analyse_one_cgsolve  analyse_size_sweep  generate_matrix.hpp  run_n
papers/kokkos-half-t-rse-escience-2022/: Makefile  Makefile.dddd  Makefile.ffff  Makefile.hhff  Makefile.hhfh  cgsolve.cpp  reproducer.md  run_benchmark.sh  run_benchmark_a100.sh  run_one  run_size_sweep
(+47 files in other folders)
